# bazaar

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.header.md  README.md  index.html  mise.toml  pypi.toml  repos.json
.claude-plugin/: marketplace.json
.ctx/: HANDOFF.bazaar.bazaar.yaml  handoff.bazaar.config.toml.example
.github/workflows/: generate.yml  release.yml
crates/bazaar-gen/: Cargo.toml
crates/bazaar-gen/src/: config.rs  deploy.rs  enrich.rs  error.rs  header.rs  main.rs  model.rs  port.rs  publish.rs
crates/bazaar-gen/src/fetch/: crates_io.rs  github.rs  insights.rs  mod.rs  plugins.rs  profile.rs  pypi.rs  usage.rs
crates/bazaar-gen/src/render/: html.rs  json.rs  markdown.rs  mod.rs  yaml.rs
crates/bazaar-gen/templates/: index.html  profile.html  project.html
crates/bazaar-types/: Cargo.toml
crates/bazaar-types/src/: insights.rs  lib.rs  profile.rs  project.rs  usage.rs
crates/xtask/src/: main.rs
docs/superpowers/plans/: 2026-04-17-bazaar-showcase.md
docs/superpowers/specs/: 2026-04-17-bazaar-showcase-design.md
examples/: README.md  ccusage.json  data.json  data.yaml  enrich-changelog.yaml  enrich-classify.yaml  enrich-describe.yaml  enrich-health.yaml  enrich-related.yaml  enrich_changelog.crux  enrich_classify.crux  enrich_describe.crux  enrich_health.crux  enrich_related.crux  header.md  header.yaml  index.html  profile.yaml  showcase.md  showcase.yaml
examples/profile/: index.html
examples/projects/hj/: index.html
scripts/: archive-project.sh  fetch-repos.sh  update-usage.sh
xtask/: Cargo.toml
xtask/src/: main.rs
(+53 files in other folders)
