[package]
name = "bazaar-gen"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "bz"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
askama = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
indexmap = "2"
base64 = "0.22"
async-trait = "0.1"

tempfile = "3"

[dev-dependencies]
serial_test = "3"
